# PyShort

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/: cli.py  config.py  framing.py  parsing.py  prompts.py  providers.py  transcription.py  utils.py  video.py
src/short_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_cache.py  test_cli_validation.py  test_parsing.py  test_providers.py  test_video_pipeline.py
