[project]
name = "short-maker"
version = "0.1.0"
description = "AI-powered YouTube Shorts clipper"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "opencv-python-headless",
    "openai-whisper",
    "torch",
]

[project.optional-dependencies]
openai = ["openai"]
gemini = ["google-genai"]
ollama = ["ollama"]
all = ["openai", "google-genai", "ollama"]

[project.scripts]
short-maker = "src.cli:main"
